Fixed overlapping with infoleiste, added margin top

--- a/it1/itab.css
+++ b/it1/itab.css
@@ -31,7 +31,7 @@
 	/* Allgemeine Stile */
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
+  margin-top: 50px;
   padding: 0;
   background-color: #f2f2f2;
 }
