--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,7 @@
 
 body {
     margin: 0px;
+    margin-top: 40px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
